# Network_in_WCE

./: .gitignore  README.md  mian.py
artifacts/: train_logs.json
artifacts/checkpoints/: dqn_ep100.pt  dqn_ep25.pt  dqn_ep50.pt  dqn_ep75.pt  final.pt
ns3/: uav_rl_scenario.cc
ros2_ws/: start.sh
ros2_ws/src/uav_simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/uav_simulation/launch/: display_uav.py  play_trace.launch.py
ros2_ws/src/uav_simulation/scripts/: start.sh
ros2_ws/src/uav_simulation/src/: trace_motion_plugin.cpp
ros2_ws/src/uav_simulation/traces/: gazebo_trace.json
ros2_ws/src/uav_simulation/uav_simulation/: trace_player.py
ros2_ws/src/uav_simulation/urdf/: simple_uav.urdf
ros2_ws/src/uav_simulation/worlds/: uav.world
scripts/: evaluate.py  export_gazebo_trace.py  export_ns3_trace.py  train.py
tests/: test_env_smoke.py
uav_rl/: __init__.py  agent.py  config.py  env.py  gazebo_bridge.py  ns3_bridge.py  replay_buffer.py  trainer.py
